--- a/tutorials/02-html/index.html
+++ b/tutorials/02-html/index.html
@@ -30,6 +30,27 @@
     <main>
         <br>
         <br>
+        <fieldset>
+            <legend>Select your Companion:</legend>
+
+            <div>
+                <input type="radio" id="Dog" name="Companion"
+                value="Dog" checked/>
+                <label for="Dog">Dog</label>
+            </div>
+            <div>
+                <input type="radio" id="Snake" name="Companion"
+                value="Snake"/>
+                <label for="Snake">Snake</label>
+            </div>
+            <div>
+                <input type="radio" id="Owl" name="Companion"
+                value="Owl"/>
+                <label for="Owl">Owl</label>
+            </div>
+        </fieldset>
+        <br>
+        <br>
         <p>Choose your companion's colors:</p>
 
         <div>
