--- a/tutorials/01b-html-images/index.html
+++ b/tutorials/01b-html-images/index.html
@@ -29,10 +29,10 @@
   <section>
     <h2> Responsive images using srcset</h2>
     <img src="images/Stadium-fallback.jpg" 
-         alt="plushie in stadium" 
-         width="640"
+         alt="" 
+         width="480"
          srcset="images/Stadium-640.jpg 640w,
-                 images/Stadium-1280.jog 1280w,
+                 images/Stadium-1280.jpg 1280w,
                  images/Stadium-1920.jpg 1920w">
   </section>
     
