--- a/tutorials/01b-html-images/index.html
+++ b/tutorials/01b-html-images/index.html
@@ -10,20 +10,21 @@
     <div>
         <img src="images/white-cat.jpg"
              alt="white cat"
-             width="480" height="360"
-             srcset="images/white-cat.jpg 480w,
-                     images/white-cat.jpg 960w,
-                     images/white-cat.jpg 1440w,
-                     images/white-cat.jpg 1920w">
+             width="480" height="360">
+    </div>
+    <div>
+        <img src="images/white-cat.jpg"
+             alt="white cat"
+             width="480" height="360">
     </div>
     <div>
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-480.jpg" 
-		 alt="shiny black dog looking pensive" 
-		 width="480" height="360"
-     srcset="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-480.jpg  480w, 
-	   	  	   https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-960.jpg  960w, 
-	   	  	   https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-1440.jpg 1440w, 
-		 				 https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-1920.jpg 1920w"
+		     alt="shiny black dog looking pensive" 
+		     width="480" height="360"
+             srcset="https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-480.jpg  480w, 
+	   	  	         https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-960.jpg  960w, 
+	   	  	         https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-1440.jpg 1440w, 
+		 			 https://s3-us-west-2.amazonaws.com/s.cdpn.io/10558/dog-1920.jpg 1920w">
     </div>
   </section>
   <section>
