--- a/tutorials/dom/index.html
+++ b/tutorials/dom/index.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Javascript Tutorial</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <header>
         <h1 id="page-title">DOM Dom DoM</h1>
     </header>
     <main>
-        <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste voluptas Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium amet, deserunt dolore ducimus eligendi odio culpa quibusdam autem neque magnam voluptates tenetur est voluptatum pariatur architecto magni quam mollitia beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde harum atque ducimus tempore quo nemo quam. Laudantium accusamus, optio fugiat, eveniet similique vero sed enim labore assumenda aliquam pariatur placeat!eius accusantium ducimus ipsa molestias dolorum vitae cupiditate. Perferendis unde ducimus ab, modi ex voluptatum iusto? Voluptatem quae amet eaque.</p> 
-        <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste voluptas Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium amet, deserunt dolore ducimus eligendi odio culpa quibusdam autem neque magnam voluptates tenetur est voluptatum pariatur architecto magni quam mollitia beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde harum atque ducimus tempore quo nemo quam. Laudantium accusamus, optio fugiat, eveniet similique vero sed enim labore assumenda aliquam pariatur placeat!eius accusantium ducimus ipsa molestias dolorum vitae cupiditate. Perferendis unde ducimus ab, modi ex voluptatum iusto? Voluptatem quae amet eaque.</p>
-        <p class="text-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste voluptas Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium amet, deserunt dolore ducimus eligendi odio culpa quibusdam autem neque magnam voluptates tenetur est voluptatum pariatur architecto magni quam mollitia beatae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde harum atque ducimus tempore quo nemo quam. Laudantium accusamus, optio fugiat, eveniet similique vero sed enim labore assumenda aliquam pariatur placeat!eius accusantium ducimus ipsa molestias dolorum vitae cupiditate. Perferendis unde ducimus ab, modi ex voluptatum iusto? Voluptatem quae amet eaque.</p>
+      <div class="image-div" id="image-0">
+        <img src="images/Dog_and_Owl.jpg" alt="">
+      </div>
+      <div class="image-div" id="image-0">
+        <img src="images/Snake.jpg" alt="">
+      </div>
+      <div class="image-div" id="image-0">
+        <img src="images/Snake2.jpg" alt="">
+      </div>
     </main>
+
+    <script src="js/main.js"></script>
+
 </body>
 </html>
